RESOLVED FIXED270066
scanAttributeName doesn't need to check for "is" content attribute
https://bugs.webkit.org/show_bug.cgi?id=270066
Summary scanAttributeName doesn't need to check for "is" content attribute
Ryosuke Niwa
Reported 2024-02-25 22:22:45 PST
We don't support "is" content attribute. Consequently, we don't need to check for this attribute name in HTMLDocumentParserFastPath::scanAttributeName.
Attachments
Ryosuke Niwa
Comment 1 2024-02-25 22:25:55 PST
EWS
Comment 2 2024-02-26 10:59:25 PST
Committed 275331@main (5590366d49ca): <https://commits.webkit.org/275331@main> Reviewed commits have been landed. Closing PR #25084 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-02-26 11:00:16 PST
Note You need to log in before you can comment on or make changes to this bug.