Cherry-pick 5590366d49ca. rdar://123641381

scanAttributeName doesn't need to check for "is" content attribute
    https://bugs.webkit.org/show_bug.cgi?id=270066

    Reviewed by Chris Dumez and Yusuke Suzuki.

    Since we don't support "is" content attribute, we don't need to check for its presence.

    * Source/WebCore/html/parser/HTMLDocumentParserFastPath.cpp:
    (WebCore::HTMLFastPathParser::scanAttributeName):

    Canonical link: https://commits.webkit.org/275331@main

Canonical link: https://commits.webkit.org/272448.645@safari-7618-branch